fix(frontend): resolve overflow-y issue during pick tile

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   /* background-color: #000; */
   font-family: 'Audiowide' !important;
+  overflow: auto !important;
 }
 
 a {
